# nspre-gui

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  LICENSE  README.md  docker.md
src/: create_window.cpp  extract_window.cpp  file_browser_base.cpp  file_browser_open_multi.cpp  file_browser_open_one.cpp  file_browser_save_multi.cpp  file_browser_save_one.cpp  main.cpp  nspre-gui.hpp
